<resources>
    <string name="app_name" translatable="false">VladosPosos</string>
    <string name="onboarding_big_text">Discover your dream job\nand embark on your\njourney today</string>
    <string name="onboarding_small_text">Start your career journey and unlock new\nopportunities</string>
    <string name="get_started">Get Started</string>
    <string name="app_logo_text">App logo</string>
    <string name="create_your_naccount">Create your\naccount</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="or">Or</string>
    <string name="sign_up_with_vk">Sign up with VK</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_to_your_account">Login to your\naccount</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="the_field_is_required">The field is required</string>
    <string name="incorrect_email_format">Incorrect email format</string>
    <string name="email_is_already_registered">Email is already registered</string>
    <string name="password_must_contain_more_than_5_characters">Password must contain more than 5 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_password">Invalid password</string>
</resources>