<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <TextView
            android:id="@+id/createAccountTV"
            style="@style/BigTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_to_your_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterEmailAddressTV"
            style="@style/TextAboveETStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_your_email"
            app:layout_constraintStart_toStartOf="@+id/createAccountTV"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTV" />

        <EditText
            android:id="@+id/enterEmailET"
            style="@style/TextInEditText"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/et_with_gradient_stroke"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxEms="20"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterEmailAddressTV"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/enterPasswordTV"
            style="@style/TextAboveETStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/enter_your_password"
            app:layout_constraintStart_toStartOf="@+id/enterEmailAddressTV"
            app:layout_constraintTop_toBottomOf="@+id/errorEnterEmailTV" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            app:endIconDrawable="@drawable/eye_for_password_selector"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/enterEmailET"
            app:layout_constraintHorizontal_bias="0.595"
            app:layout_constraintStart_toStartOf="@+id/enterEmailET"
            app:layout_constraintTop_toBottomOf="@+id/enterPasswordTV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/et_password"
                android:fontFamily="@font/jost_light"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="0dp"
                android:textColor="@color/white"
                android:textColorHint="@color/et_stroke" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/materialCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:buttonCompat="@drawable/custom_checkbox"
            app:buttonTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorEnterPasswordTV" />

        <TextView
            android:id="@+id/rememberMeTV"
            style="@style/PaleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/remember_me"
            app:layout_constraintBottom_toBottomOf="@+id/materialCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialCheckBox"
            app:layout_constraintVertical_bias="0.48" />

        <TextView
            android:id="@+id/gradientForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_regular"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:background="@drawable/ripple_gradient_text"
            app:layout_constraintBottom_toBottomOf="@+id/rememberMeTV"
            app:layout_constraintEnd_toEndOf="@+id/enterPasswordET"
            app:layout_constraintTop_toTopOf="@+id/rememberMeTV" />


        <Button
            android:id="@+id/logInBttn"
            style="@style/GradientButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple_gradient_button"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="@+id/enterPasswordET"
            app:layout_constraintStart_toStartOf="@+id/enterPasswordET"
            app:layout_constraintTop_toBottomOf="@+id/materialCheckBox" />

        <TextView
            android:id="@+id/leftDividingLineTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dividing_line"
            app:layout_constraintBottom_toBottomOf="@+id/orTV"
            app:layout_constraintEnd_toStartOf="@+id/orTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orTV" />

        <TextView
            android:id="@+id/orTV"
            style="@style/PaleText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInBttn" />

        <TextView
            android:id="@+id/rightDividingLineTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dividing_line"
            app:layout_constraintBottom_toBottomOf="@+id/orTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orTV"
            app:layout_constraintTop_toTopOf="@+id/orTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpWithGoogleBttn"
            style="@style/GrayButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/ripple_gray_button"
            android:gravity="center"
            android:text="@string/sign_up_with_google"
            app:icon="@drawable/ic_google_logo"
            app:iconGravity="textStart"
            app:iconSize="27dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/logInBttn"
            app:layout_constraintStart_toStartOf="@+id/logInBttn"
            app:layout_constraintTop_toBottomOf="@+id/orTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpWithVKBttn"
            style="@style/GrayButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/ripple_gray_button"
            android:gravity="center"
            android:text="@string/sign_up_with_vk"
            app:icon="@drawable/ic_vk_logo"
            app:iconGravity="textStart"
            app:iconSize="27dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/signUpWithGoogleBttn"
            app:layout_constraintStart_toStartOf="@+id/signUpWithGoogleBttn"
            app:layout_constraintTop_toBottomOf="@+id/signUpWithGoogleBttn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/signUpWithVKBttn"
            app:layout_constraintStart_toStartOf="@+id/signUpWithVKBttn"
            app:layout_constraintTop_toBottomOf="@+id/signUpWithVKBttn">


            <TextView
                android:id="@+id/dontHaveAccTV"
                style="@style/PaleText"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/gradientCreateAccTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_gradient_text"
                android:fontFamily="@font/jost_regular"
                android:text="@string/create_an_account"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/errorEnterEmailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@null"
            style="@style/ErrorTextView"
            app:layout_constraintStart_toStartOf="@+id/enterEmailAddressTV"
            app:layout_constraintTop_toBottomOf="@+id/enterEmailET" />

        <TextView
            android:id="@+id/errorEnterPasswordTV"
            style="@style/ErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@null"
            app:layout_constraintStart_toStartOf="@+id/enterPasswordTV"
            app:layout_constraintTop_toBottomOf="@+id/enterPasswordET" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>